--- a/account_invoice_refund_link/i18n/ca.po
+++ b/account_invoice_refund_link/i18n/ca.po
@@ -1,98 +1,67 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
 # * account_invoice_refund_link
-#
+# 
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 11.0\n"
+"Project-Id-Version: l10n-spain (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-11 02:41+0000\n"
-"PO-Revision-Date: 2022-04-27 18:05+0000\n"
-"Last-Translator: pablontura <pablo.ruiz@qubiq.es>\n"
-"Language-Team: Catalan (https://www.transifex.com/oca/teams/23907/ca/)\n"
-"Language: ca\n"
+"POT-Creation-Date: 2015-08-14 00:52+0000\n"
+"PO-Revision-Date: 2015-05-23 09:01+0000\n"
+"Last-Translator: Pedro M. Baeza <pedro.baeza@gmail.com>\n"
+"Language-Team: Catalan (http://www.transifex.com/oca/OCA-l10n-spain-8-0/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.3.2\n"
+"Language: ca\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: account_invoice_refund_link
-#: model:ir.model,name:account_invoice_refund_link.model_account_move_reversal
-#, fuzzy
-msgid "Account Move Reversal"
-msgstr "Revocació de moviment de compte"
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
+msgid "Description"
+msgstr "Descripció"
 
 #. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
-msgid "Invoice reference"
-msgstr "Referència de la factura"
+#: model:ir.model,name:account_invoice_refund_link.model_account_invoice
+msgid "Invoice"
+msgstr "Factura"
 
 #. module: account_invoice_refund_link
-#: model:ir.model,name:account_invoice_refund_link.model_account_move
-msgid "Journal Entry"
+#: model:ir.model,name:account_invoice_refund_link.model_account_invoice_refund
+msgid "Invoice Refund"
 msgstr ""
 
 #. module: account_invoice_refund_link
-#: model:ir.model,name:account_invoice_refund_link.model_account_move_line
-msgid "Journal Item"
-msgstr "Element de diari"
-
-#. module: account_invoice_refund_link
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_move_line__origin_line_id
-msgid "Original invoice line"
-msgstr "Línia de factura original"
-
-#. module: account_invoice_refund_link
-#: model:ir.model.fields,help:account_invoice_refund_link.field_account_move_line__origin_line_id
-msgid "Original invoice line to which this refund invoice line is referred to"
+#: help:account.invoice,origin_invoice_ids:0
+msgid "Links to original invoice which is referred by current refund invoice"
 msgstr ""
-"Línia de factura original a la qual es fa referència aquesta línia de "
-"factura de reemborsament"
 
 #. module: account_invoice_refund_link
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_bank_statement_line__refund_invoice_ids
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_move__refund_invoice_ids
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_payment__refund_invoice_ids
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.account_invoice_refund_form_view
-msgid "Refund Invoices"
-msgstr "Devolució de factures"
-
-#. module: account_invoice_refund_link
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_move_line__refund_line_ids
-msgid "Refund invoice lines"
-msgstr "Línies de reemborsament de la factura"
-
-#. module: account_invoice_refund_link
-#: model:ir.model.fields,help:account_invoice_refund_link.field_account_move_line__refund_line_ids
-msgid "Refund invoice lines created from this invoice line"
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
+msgid "Payments"
 msgstr ""
-"Reembossa les línies de factura creades a partir d'aquesta línia de factura"
 
 #. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: field:account.invoice,origin_invoice_ids:0
+msgid "Refund invoice"
+msgstr ""
+
+#. module: account_invoice_refund_link
+#: field:account.invoice,refund_reason:0
+msgid "Refund invoices description"
+msgstr ""
+
+#. module: account_invoice_refund_link
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
+msgid "Refunded invoices"
+msgstr ""
+
+#. module: account_invoice_refund_link
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
 msgid "Refunds"
 msgstr "Rectificacions"
-
-#. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.account_invoice_refund_form_view
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
-msgid "Status"
-msgstr "Estat"
-
-#. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.account_invoice_refund_form_view
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
-msgid "Total"
-msgstr "Total"
-
-#~ msgid "Journal Entries"
-#~ msgstr "Entrades de diari"
-
-#~ msgid "Customer"
-#~ msgstr "Client "
-
-#~ msgid "Supplier"
-#~ msgstr "Proveïdor "
