--- a/account_invoice_refund_link/i18n/en.po
+++ b/account_invoice_refund_link/i18n/en.po
@@ -8,60 +8,60 @@ msgstr ""
 "Project-Id-Version: l10n-spain (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-14 00:52+0000\n"
-"PO-Revision-Date: 2015-05-23 09:01+0000\n"
+"PO-Revision-Date: 2015-05-23 08:55+0000\n"
 "Last-Translator: Pedro M. Baeza <pedro.baeza@gmail.com>\n"
-"Language-Team: Polish (http://www.transifex.com/oca/OCA-l10n-spain-8-0/language/pl/)\n"
+"Language-Team: English (http://www.transifex.com/oca/OCA-l10n-spain-8-0/language/en/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: pl\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: en\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: account_invoice_refund_link
 #: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
 #: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
 msgid "Description"
-msgstr "Opis"
+msgstr "Description"
 
 #. module: account_invoice_refund_link
 #: model:ir.model,name:account_invoice_refund_link.model_account_invoice
 msgid "Invoice"
-msgstr ""
+msgstr "Invoice"
 
 #. module: account_invoice_refund_link
 #: model:ir.model,name:account_invoice_refund_link.model_account_invoice_refund
 msgid "Invoice Refund"
-msgstr ""
+msgstr "Invoice Refund"
 
 #. module: account_invoice_refund_link
 #: help:account.invoice,origin_invoice_ids:0
 msgid "Links to original invoice which is referred by current refund invoice"
-msgstr ""
+msgstr "Links to original invoice which is referred by current refund invoice"
 
 #. module: account_invoice_refund_link
 #: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
 #: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
 msgid "Payments"
-msgstr ""
+msgstr "Payments"
 
 #. module: account_invoice_refund_link
 #: field:account.invoice,origin_invoice_ids:0
 msgid "Refund invoice"
-msgstr ""
+msgstr "Refund invoice"
 
 #. module: account_invoice_refund_link
 #: field:account.invoice,refund_reason:0
 msgid "Refund invoices description"
-msgstr ""
+msgstr "Refund invoices description"
 
 #. module: account_invoice_refund_link
 #: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
 #: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
 msgid "Refunded invoices"
-msgstr ""
+msgstr "Refunded invoices"
 
 #. module: account_invoice_refund_link
 #: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
 #: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
 msgid "Refunds"
-msgstr ""
+msgstr "Refunds"
