--- a/account_invoice_refund_link/i18n/gl.po
+++ b/account_invoice_refund_link/i18n/gl.po
@@ -3,86 +3,66 @@
 # * account_invoice_refund_link
 #
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2017
+# Alejandro Santana <alejandrosantana@anubia.es>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 11.0\n"
+"Project-Id-Version: l10n-spain (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-11 02:41+0000\n"
-"PO-Revision-Date: 2018-04-11 02:41+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
-"Language-Team: Galician (https://www.transifex.com/oca/teams/23907/gl/)\n"
-"Language: gl\n"
+"POT-Creation-Date: 2015-08-14 00:52+0000\n"
+"PO-Revision-Date: 2015-06-25 23:28+0000\n"
+"Last-Translator: Alejandro Santana <alejandrosantana@anubia.es>\n"
+"Language-Team: Galician (http://www.transifex.com/oca/OCA-l10n-spain-8-0/language/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
+"Language: gl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: account_invoice_refund_link
-#: model:ir.model,name:account_invoice_refund_link.model_account_move_reversal
-msgid "Account Move Reversal"
-msgstr ""
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
+msgid "Description"
+msgstr "Descrición"
 
 #. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
-msgid "Invoice reference"
-msgstr ""
-
-#. module: account_invoice_refund_link
-#: model:ir.model,name:account_invoice_refund_link.model_account_move
-msgid "Journal Entry"
-msgstr ""
-
-#. module: account_invoice_refund_link
-#: model:ir.model,name:account_invoice_refund_link.model_account_move_line
-msgid "Journal Item"
-msgstr ""
-
-#. module: account_invoice_refund_link
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_move_line__origin_line_id
-msgid "Original invoice line"
-msgstr ""
-
-#. module: account_invoice_refund_link
-#: model:ir.model.fields,help:account_invoice_refund_link.field_account_move_line__origin_line_id
-msgid "Original invoice line to which this refund invoice line is referred to"
-msgstr ""
-
-#. module: account_invoice_refund_link
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_bank_statement_line__refund_invoice_ids
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_move__refund_invoice_ids
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_payment__refund_invoice_ids
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.account_invoice_refund_form_view
-#, fuzzy
-msgid "Refund Invoices"
+#: model:ir.model,name:account_invoice_refund_link.model_account_invoice
+msgid "Invoice"
 msgstr "Factura"
 
 #. module: account_invoice_refund_link
-#: model:ir.model.fields,field_description:account_invoice_refund_link.field_account_move_line__refund_line_ids
-msgid "Refund invoice lines"
-msgstr ""
+#: model:ir.model,name:account_invoice_refund_link.model_account_invoice_refund
+msgid "Invoice Refund"
+msgstr "Factura rectificativa"
 
 #. module: account_invoice_refund_link
-#: model:ir.model.fields,help:account_invoice_refund_link.field_account_move_line__refund_line_ids
-msgid "Refund invoice lines created from this invoice line"
-msgstr ""
+#: help:account.invoice,origin_invoice_ids:0
+msgid "Links to original invoice which is referred this refund invoice"
+msgstr "Enlaces á factura orixinal á que fai referencia esta factura rectificativa"
 
 #. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
+msgid "Payments"
+msgstr "Pagamentos"
+
+#. module: account_invoice_refund_link
+#: field:account.invoice,origin_invoice_ids:0
+msgid "Refund invoice"
+msgstr "Factura rectificativa"
+
+#. module: account_invoice_refund_link
+#: field:account.invoice,refund_reason:0
+msgid "Refund invoices description"
+msgstr "Descrición de facturas rectificativas"
+
+#. module: account_invoice_refund_link
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
+msgid "Refunded invoices"
+msgstr "Facturas rectificadas"
+
+#. module: account_invoice_refund_link
+#: view:account.invoice:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
+#: view:account.invoice:account_invoice_refund_link.view_supplier_account_invoice_add_refunds_details_form
 msgid "Refunds"
 msgstr "Rectificacións"
-
-#. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.account_invoice_refund_form_view
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
-msgid "Status"
-msgstr ""
-
-#. module: account_invoice_refund_link
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.account_invoice_refund_form_view
-#: model_terms:ir.ui.view,arch_db:account_invoice_refund_link.view_customer_account_invoice_add_refunds_details_form
-msgid "Total"
-msgstr "Total"
-
-#~ msgid "Customer"
-#~ msgstr "Cliente"
