--- a/account_invoice_fixed_discount/i18n/ca.po
+++ b/account_invoice_fixed_discount/i18n/ca.po
@@ -4,38 +4,19 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 17.0+e\n"
+"Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-14 16:59+0000\n"
-"PO-Revision-Date: 2024-02-14 16:59+0000\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: \n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. module: account_invoice_fixed_discount
 #: model_terms:ir.ui.view,arch_db:account_invoice_fixed_discount.report_invoice_document
-msgid "<span class=\"text-nowrap\"> %)</span>"
-msgstr ""
-
-#. module: account_invoice_fixed_discount
-#: model_terms:ir.ui.view,arch_db:account_invoice_fixed_discount.report_invoice_document
-msgid "<span class=\"text-nowrap\"> (or</span>"
-msgstr ""
-
-#. module: account_invoice_fixed_discount
-#: model_terms:ir.ui.view,arch_db:account_invoice_fixed_discount.report_invoice_document
-msgid "<span>Discount Amount (%)</span>"
-msgstr ""
-
-#. module: account_invoice_fixed_discount
-#: model:ir.model.fields,help:account_invoice_fixed_discount.field_account_move_line__discount_fixed
-msgid ""
-"Apply a fixed amount discount to this line. The amount is multiplied by the "
-"quantity of the product."
+msgid "<span>Disc. Fixed Amount</span>"
 msgstr ""
 
 #. module: account_invoice_fixed_discount
@@ -44,16 +25,40 @@ msgid "Discount (Fixed)"
 msgstr ""
 
 #. module: account_invoice_fixed_discount
-#: model:res.groups,name:account_invoice_fixed_discount.group_fixed_discount
-msgid "Fixed Discount"
+#: model:ir.model.fields,field_description:account_invoice_fixed_discount.field_account_move__display_name
+#: model:ir.model.fields,field_description:account_invoice_fixed_discount.field_account_move_line__display_name
+msgid "Display Name"
+msgstr ""
+
+#. module: account_invoice_fixed_discount
+#: model:ir.model.fields,help:account_invoice_fixed_discount.field_account_move_line__discount_fixed
+msgid "Fixed amount discount."
+msgstr ""
+
+#. module: account_invoice_fixed_discount
+#: model:ir.model.fields,field_description:account_invoice_fixed_discount.field_account_move__id
+#: model:ir.model.fields,field_description:account_invoice_fixed_discount.field_account_move_line__id
+msgid "ID"
+msgstr ""
+
+#. module: account_invoice_fixed_discount
+#: model:ir.model,name:account_invoice_fixed_discount.model_account_move
+msgid "Journal Entry"
 msgstr ""
 
 #. module: account_invoice_fixed_discount
 #: model:ir.model,name:account_invoice_fixed_discount.model_account_move_line
 msgid "Journal Item"
-msgstr "Apunt comptable"
+msgstr ""
 
 #. module: account_invoice_fixed_discount
-#: model:ir.model,name:account_invoice_fixed_discount.model_account_tax
-msgid "Tax"
-msgstr "Impost"
+#: model:ir.model.fields,field_description:account_invoice_fixed_discount.field_account_move____last_update
+#: model:ir.model.fields,field_description:account_invoice_fixed_discount.field_account_move_line____last_update
+msgid "Last Modified on"
+msgstr ""
+
+#. module: account_invoice_fixed_discount
+#: code:addons/account_invoice_fixed_discount/models/account_move.py:0
+#, python-format
+msgid "You can only set one type of discount per line."
+msgstr ""
