--- a/account_invoice_fixed_discount/i18n/pt_BR.po
+++ b/account_invoice_fixed_discount/i18n/pt_BR.po
@@ -4,32 +4,30 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 17.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-14 17:04+0000\n"
-"PO-Revision-Date: 2024-02-14 17:04+0000\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: \n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
 
 #. module: account_invoice_fixed_discount
 #: model_terms:ir.ui.view,arch_db:account_invoice_fixed_discount.report_invoice_document
-msgid "<span class=\"text-nowrap\"> %)</span>"
+msgid "(or"
 msgstr ""
 
 #. module: account_invoice_fixed_discount
 #: model_terms:ir.ui.view,arch_db:account_invoice_fixed_discount.report_invoice_document
-msgid "<span class=\"text-nowrap\"> (or</span>"
+msgid "<span>Disc. %</span>"
 msgstr ""
 
 #. module: account_invoice_fixed_discount
 #: model_terms:ir.ui.view,arch_db:account_invoice_fixed_discount.report_invoice_document
 msgid "<span>Discount Amount (%)</span>"
-msgstr "<span>Total Desconto (%)</span>"
+msgstr ""
 
 #. module: account_invoice_fixed_discount
 #: model:ir.model.fields,help:account_invoice_fixed_discount.field_account_move_line__discount_fixed
@@ -37,31 +35,23 @@ msgid ""
 "Apply a fixed amount discount to this line. The amount is multiplied by the "
 "quantity of the product."
 msgstr ""
-"Aplique um desconto de valor fixo a esta linha. O valor é multiplicado pela "
-"quantidade do produto."
 
 #. module: account_invoice_fixed_discount
 #: model:ir.model.fields,field_description:account_invoice_fixed_discount.field_account_move_line__discount_fixed
 msgid "Discount (Fixed)"
-msgstr "Desconto (Fixo)"
+msgstr ""
 
 #. module: account_invoice_fixed_discount
 #: model:res.groups,name:account_invoice_fixed_discount.group_fixed_discount
 msgid "Fixed Discount"
-msgstr "Desconto Fixo"
+msgstr ""
 
 #. module: account_invoice_fixed_discount
 #: model:ir.model,name:account_invoice_fixed_discount.model_account_move_line
 msgid "Journal Item"
-msgstr "Item do diário"
+msgstr ""
 
 #. module: account_invoice_fixed_discount
 #: model:ir.model,name:account_invoice_fixed_discount.model_account_tax
 msgid "Tax"
-msgstr "Imposto"
-
-#~ msgid "(or"
-#~ msgstr "(ou"
-
-#~ msgid "<span>Disc. %</span>"
-#~ msgstr "<span>Desc. %</span>"
+msgstr ""
